<resources>
    <string name="app_name">AniHome</string>
    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="feed">Feed</string>
    <string name="forum">Forum</string>
    <string name="manga">Manga</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="plus_one" translatable="false">+ 1</string>
    <string name="minus_one" translatable="false">− 1</string>
    <string name="plus_one_volume">+ 1 vol</string>
    <string name="plus_one_chapter">+ 1 ch</string>
    <string name="no_reviews">No reviews!</string>
    <string name="highest_rated_all_time">#%1$d Highest rated all time</string>
    <string name="most_popular_all_time">#%1$d Most popular all time</string>
    <string name="highest_rated_year">#%1$d Highest rated %2$d</string>
    <string name="most_popular_year">#%1$d Most popular %2$d</string>
    <string name="highest_rated_season">#%1$d Highest rated %2$s %3$d</string>
    <string name="most_popular_season">#%1$d Most popular %2$s %3$d</string>
    <string name="no_characters">No characters!</string>
    <string name="share">Share</string>
    <string name="question_mark">\?</string>
    <string name="filter">Filter</string>
    <string name="close">Close</string>
    <string name="all">All</string>
    <string name="watching">Watching</string>
    <string name="reading">Reading</string>
    <string name="rewatching">Rewatching</string>
    <string name="rereading">Rereading</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="current">Current</string>
    <string name="plan_to_watch">Plan to watch</string>
    <string name="plan_to_read">Plan to read</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="menu">Menu</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="trending_now">Trending now</string>
    <string name="popular_this_season">Popular this season</string>
    <string name="upcoming_next_season">Upcoming next season</string>
    <string name="all_time_popular">All time popular</string>
    <string name="top_100_anime">Top 100 anime</string>
    <string name="settings">Settings</string>
    <string name="default_sort">Default</string>
    <string name="favourites">Favourites</string>
    <string name="favourites_DESC">Favourites (desc)</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="score">Score</string>
    <string name="popularity">Popularity</string>
    <string name="trending">Trending</string>
    <string name="episode_amount">Episode amount</string>
    <string name="duration">Duration</string>
    <string name="chapter_amount">Chapter amount</string>
    <string name="volume_amount">Volume amount</string>
    <string name="input_a_valid_value">Input a valid value!</string>
    <string name="search_match">Search match</string>
    <string name="adaption">Adaption</string>
    <string name="prequel">Prequel</string>
    <string name="sequel">Sequel</string>
    <string name="parent">Parent</string>
    <string name="side_story">Side story</string>
    <string name="character">Character</string>
    <string name="summary">Summary</string>
    <string name="alternative">Alternative</string>
    <string name="spin_off">Spin off</string>
    <string name="other">Other</string>
    <string name="source">Source</string>
    <string name="compilation">Compilation</string>
    <string name="contains">Contains</string>
    <string name="unknown">Unknown</string>
    <string name="keep_editing">Keep editing</string>
    <string name="discard">Discard</string>
    <string name="my_anime">My anime</string>
    <string name="my_manga">My manga</string>
    <string name="popular_manhwa">Popular manhwa</string>
    <string name="top_100_manga">Top 100 manga</string>
    <string name="background">Background</string>
    <string name="supporting">Supporting</string>
    <string name="main">Main</string>
    <string name="plus_one_episode">+ 1 ep</string>
    <string name="edit">Edit</string>
    <string name="refresh">Refresh</string>
    <string name="my_anime_list">My anime list</string>
    <string name="my_manga_list">My manga list</string>
    <string name="no_anime_add_something_to_your_list">No anime! Add something to your list ♥</string>
    <string name="no_manga_add_something_to_your_list">No manga! Add something to your list ♥</string>
    <string name="paused">Paused</string>
    <string name="rating">Rating</string>
    <string name="network_error_info">"Check your network connections and reload your media list, if the issue still persists, try logging out through the settings menu on the home page"</string>
    <string name="reload">Reload</string>
    <string name="planning">Planning</string>
    <string name="save">Save</string>
    <string name="please_login_to_use_this_feature">Please login to use this feature</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="season">Season</string>
    <string name="year">Year</string>
    <string name="finished">Finished</string>
    <string name="releasing">Releasing</string>
    <string name="not_yet_released">Not yet released</string>
    <string name="cancelled">Cancelled</string>
    <string name="hiatus">Hiatus</string>
    <string name="airing_status">Airing Status</string>
    <string name="tag_info">Tag info</string>
    <string name="tv">TV</string>
    <string name="tv_short">TV short</string>
    <string name="movie">Movie</string>
    <string name="special">Special</string>
    <string name="ova">OVA</string>
    <string name="ona">ONA</string>
    <string name="music">Music</string>
    <string name="novel">Novel</string>
    <string name="one_shot">One shot</string>
    <string name="reload_genres">Reload genres</string>
    <string name="reload_tags">Reload tags</string>
    <string name="genres">Genres</string>
    <string name="genres_tags">Genres - Tags</string>
    <string name="log_out">Log out</string>
    <string name="log_out_question">Log out?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="reset">Reset</string>
    <string name="reset_sort">Reset sort</string>
    <string name="media_id">Media id</string>
    <string name="progress">Progress</string>
    <string name="media_id_desc">Media id desc</string>
    <string name="score_desc">Score desc</string>
    <string name="progress_desc">Progress desc</string>
    <string name="progress_volumes">Progress volumes</string>
    <string name="progress_volumes_desc">Progress volumes desc</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_desc">Repeat desc</string>
    <string name="priority">Priority</string>
    <string name="priority_desc">Priority desc</string>
    <string name="started_on">Started on</string>
    <string name="started_on_desc">Started on desc</string>
    <string name="finished_on">Finished on</string>
    <string name="finished_on_desc">Finished on desc</string>
    <string name="added_time">Added time</string>
    <string name="added_time_desc">Added time desc</string>
    <string name="updated_time">Updated time</string>
    <string name="updated_time_desc">Updated time desc</string>
    <string name="media_title">Media title</string>
    <string name="media_title_desc">Media title desc</string>
    <string name="airing">Airing</string>
    <string name="activity">Activity</string>
    <string name="follows">Follows</string>
    <string name="media">Media</string>
    <string name="clear_cache">Clear cache</string>
    <string name="notifications">Notifications</string>
    <string name="none">None</string>
    <string name="rankings">Rankings</string>
    <string name="score_distribution">Score distribution</string>
    <string name="status_distribution">Status distribution</string>
    <string name="search_for_anime_manga">Search for Anime, Manga...</string>
    <string name="status">Status</string>
    <string name="confirm">Confirm</string>
    <string name="anime_year">Anime year</string>
    <string name="relevance">Relevance</string>
    <string name="role">Role</string>
    <string name="role_desc">Role (desc)</string>
    <plurals name="show_spoiler_name">
        <item quantity="one">Show spoiler name</item>
        <item quantity="other">Show spoiler names</item>
    </plurals>
    <plurals name="volume">
        <item quantity="one">%1d Volume</item>
        <item quantity="other">%1d Volumes</item>
    </plurals>
    <plurals name="episode">
        <item quantity="one">%1d Episode</item>
        <item quantity="other">%1d Episodes</item>
    </plurals>
    <plurals name="chapter">
        <item quantity="one">%1d Chapter</item>
        <item quantity="other">%1d Chapters</item>
    </plurals>
</resources>