...
                Text(text = "Is loading...")
            }

            is SettingsUiState.Success -> {
                var showModalBottomSheet by remember { mutableStateOf(false) }
                var showDialogue by remember { mutableStateOf(false) }
                Section("Display")
                Column(
                    modifier =
                        Modifier
                            .fillMaxWidth()
                            .padding(bottom = Dimens.PaddingSmall)
                            .clickable {
...
